2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_add_images), (wp_dragged_image),
	(desktop_init):
	* appearance-main.c: (main):
	* appearance-style.c: (update_color_buttons_from_settings),
	(check_color_schemes_enabled), (update_cursor_size_scale),
	(prepare_list), (style_init):
	* appearance-ui.c: (ui_init): shave off a number of unnecessary casts

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed): also remove code that we
	needed when the thumbnailer was still in-process

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): remove stuff I forgot
	to delete

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): make sure the color
	scheme has changed before writing to GConf and enabling the reset button

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string): simplify
	(check_color_schemes_enabled): fix check for available symbolic colors
	and make buttons for unsupported colors insensitive (bug #464081)
	(color_button_clicked_cb), (style_init): simplify

	* data/appearance.glade: name the color buttons exactly like their
	respective color so we don't need to keep two arrays around

2007-08-05  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): reinstate select-after-realize;
	it's still necessary

2007-08-05  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Dennis Cranston <dennis_cranston@yahoo.com>

	* data/appearance.glade: Indent category contents, and other HIG
	spacing fixes for "Font Rendering Details" dialog (bug #463332)

2007-08-04  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Dennis Cranston <dennis_cranston@yahoo.com>

        * appearance-style.c: (update_cursor_size_scale) Toggle
        sensitivity of the cursor scale labels (bug #463442)

2007-08-04  Denis Washington  <denisw@svn.gnome.org>
